--- a/src/renderer/src/assets/global.css
+++ b/src/renderer/src/assets/global.css
@@ -18,3 +18,11 @@ a:link,
 a:active {
   color: #333;
 }
+
+/* 新增 Toast 样式 */
+.p-toast {
+  --toast-border: 1px solid rgba(255, 255, 255, 0.1);
+  --toast-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  width: auto;
+  max-width: 300px;
+}
