初步重构注册组件

--- a/src/renderer/src/assets/global.css
+++ b/src/renderer/src/assets/global.css
@@ -21,8 +21,9 @@ a:active {
 
 /* 新增 Toast 样式 */
 .p-toast {
-  --toast-border: 1px solid rgba(255, 255, 255, 0.1);
-  --toast-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: auto;
   max-width: 300px;
+}
+::-webkit-scrollbar {
+  display: none;
 }
